--- a/RxMemo/RxMemo/ViewController/Base.lproj/Main.storyboard
+++ b/RxMemo/RxMemo/ViewController/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,37 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-430" y="-2"/>
-        </scene>
-        <!--메모 목록-->
-        <scene sceneID="ppT-Pn-Edm">
-            <objects>
-                <viewController id="n3N-im-b2S" customClass="MemoListViewController" customModule="RxMemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Hbb-XQ-IU1">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="WtG-n4-CtT"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="메모 목록" id="KuA-zQ-yRt"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e6X-rL-XQY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1607" y="-2"/>
-        </scene>
         <!--새 메모-->
         <scene sceneID="0tm-no-CV2">
             <objects>
@@ -57,6 +26,64 @@
             <point key="canvasLocation" x="3115" y="-665"/>
         </scene>
         <!--메모 보기-->
+        <scene sceneID="aeL-Bm-YCN">
+            <objects>
+                <viewController id="WRa-5a-Ays" customClass="MemoListViewController" customModule="RxMemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AJ3-sG-XPM">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2g7-Ws-U36">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="Rsq-FJ-Tqj" style="IBUITableViewCellStyleDefault" id="tlj-Dj-wN9">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tlj-Dj-wN9" id="xhT-Pf-y0c">
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Rsq-FJ-Tqj">
+                                                    <rect key="frame" x="20" y="0.0" width="334.66666666666669" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zQI-u3-Ixy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="top" secondItem="zQI-u3-Ixy" secondAttribute="top" id="MdV-cW-wpG"/>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="bottom" secondItem="zQI-u3-Ixy" secondAttribute="bottom" id="Noj-tb-kQU"/>
+                            <constraint firstItem="zQI-u3-Ixy" firstAttribute="bottom" secondItem="2g7-Ws-U36" secondAttribute="bottom" id="Zu2-Mi-6TY"/>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="leading" secondItem="zQI-u3-Ixy" secondAttribute="leading" id="c7g-x9-dqN"/>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="trailing" secondItem="zQI-u3-Ixy" secondAttribute="trailing" id="nFF-RT-1z0"/>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="leading" secondItem="zQI-u3-Ixy" secondAttribute="leading" id="nzt-Bl-zCv"/>
+                            <constraint firstItem="2g7-Ws-U36" firstAttribute="top" secondItem="zQI-u3-Ixy" secondAttribute="top" id="paW-gZ-Eji"/>
+                            <constraint firstItem="zQI-u3-Ixy" firstAttribute="trailing" secondItem="2g7-Ws-U36" secondAttribute="trailing" id="xqe-hO-Bxh"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="메모 보기" id="irc-1W-gr8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Wf7-BK-CXh"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="addButton" destination="Wf7-BK-CXh" id="o3L-FD-0Em"/>
+                        <outlet property="listTableView" destination="2g7-Ws-U36" id="PMK-gL-pal"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZK1-Id-Pxe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2368.7022900763359" y="17.605633802816904"/>
+        </scene>
+        <!--메모 보기-->
         <scene sceneID="OKf-4U-aqY">
             <objects>
                 <viewController storyboardIdentifier="DetailVC" id="Wpf-0m-KFw" customClass="MemoDetailViewController" customModule="RxMemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -71,25 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EDc-ut-emJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2358" y="-2"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="qBe-OZ-ElO">
-            <objects>
-                <navigationController storyboardIdentifier="ListNav" automaticallyAdjustsScrollViewInsets="NO" id="5Vj-vN-Eud" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="l1Y-Fh-Uki">
-                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="n3N-im-b2S" kind="relationship" relationship="rootViewController" id="OGK-Lm-PJ4"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cql-WL-qwC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="884.73282442748086" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="3135" y="23"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6fU-Bs-MbV">
@@ -108,6 +117,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T0u-J3-sGK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2354.9618320610684" y="-665.49295774647885"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VXc-Gc-pEG">
+            <objects>
+                <navigationController storyboardIdentifier="ListNav" automaticallyAdjustsScrollViewInsets="NO" id="nbD-vR-aBH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="SxZ-6g-WgS">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WRa-5a-Ays" kind="relationship" relationship="rootViewController" id="CuF-ls-KrX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A1S-zF-vGj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1610" y="18"/>
         </scene>
     </scenes>
     <resources>
