--- a/RxMemo/RxMemo/ViewController/Base.lproj/Main.storyboard
+++ b/RxMemo/RxMemo/ViewController/Base.lproj/Main.storyboard
@@ -114,15 +114,84 @@
                     <view key="view" contentMode="scaleToFill" id="n3S-dH-Zl9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RPR-Hc-2YO">
+                                <rect key="frame" x="0.0" y="769" width="393" height="49"/>
+                                <items>
+                                    <barButtonItem systemItem="trash" id="e0Z-sF-pL3">
+                                        <color key="tintColor" systemColor="systemRedColor"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="oeN-et-oI4"/>
+                                    <barButtonItem title="Item" systemItem="compose" id="tmG-qC-DOo"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="iVd-E3-ZlW"/>
+                                    <barButtonItem title="Item" systemItem="action" id="qFQ-kB-sBR"/>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ZsP-GQ-Tqb">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentCell" textLabel="pz8-ko-nat" style="IBUITableViewCellStyleDefault" id="csa-UL-Xzu">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="csa-UL-Xzu" id="GCc-nL-mO0">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pz8-ko-nat">
+                                                    <rect key="frame" x="20" y="0.0" width="353" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" textLabel="BNS-EO-2bR" style="IBUITableViewCellStyleDefault" id="Mqj-pC-fKH">
+                                        <rect key="frame" x="0.0" y="94" width="393" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mqj-pC-fKH" id="1ET-gi-rHj">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BNS-EO-2bR">
+                                                    <rect key="frame" x="20" y="0.0" width="353" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mvp-N6-tg6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mvp-N6-tg6" firstAttribute="bottom" secondItem="RPR-Hc-2YO" secondAttribute="bottom" id="0EI-sQ-u5I"/>
+                            <constraint firstItem="RPR-Hc-2YO" firstAttribute="trailing" secondItem="mvp-N6-tg6" secondAttribute="trailing" id="M32-Gc-p7C"/>
+                            <constraint firstItem="ZsP-GQ-Tqb" firstAttribute="leading" secondItem="mvp-N6-tg6" secondAttribute="leading" id="OgX-uq-eW0"/>
+                            <constraint firstItem="ZsP-GQ-Tqb" firstAttribute="top" secondItem="mvp-N6-tg6" secondAttribute="top" id="Pdv-n8-rzH"/>
+                            <constraint firstItem="RPR-Hc-2YO" firstAttribute="leading" secondItem="mvp-N6-tg6" secondAttribute="leading" id="Tb1-qD-LeZ"/>
+                            <constraint firstItem="ZsP-GQ-Tqb" firstAttribute="trailing" secondItem="mvp-N6-tg6" secondAttribute="trailing" id="bOG-h5-3oX"/>
+                            <constraint firstItem="RPR-Hc-2YO" firstAttribute="top" secondItem="ZsP-GQ-Tqb" secondAttribute="bottom" id="tvv-hv-Uiu"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="메모 보기" id="xf4-II-ePg"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="deleteButton" destination="RPR-Hc-2YO" id="9HJ-Y4-tOg"/>
+                        <outlet property="editButton" destination="RPR-Hc-2YO" id="v1H-Fv-amN"/>
+                        <outlet property="listTableView" destination="ZsP-GQ-Tqb" id="v9w-Ki-Ml9"/>
+                        <outlet property="shareButton" destination="RPR-Hc-2YO" id="IE3-FH-5xk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EDc-ut-emJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3135" y="23"/>
+            <point key="canvasLocation" x="3133.5877862595416" y="22.535211267605636"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VXc-Gc-pEG">
@@ -167,6 +236,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
